{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 68,
  "lineage": "6fce23ef-561b-d713-7768-f8dc49eaee6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:internet-gateway/igw-07404fb31b0d8f4d5",
            "id": "igw-07404fb31b0d8f4d5",
            "owner_id": "880731812020",
            "tags": {
              "Name": "M300-IGW"
            },
            "tags_all": {
              "Name": "M300-IGW"
            },
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:880731812020:loadbalancer/app/ecs-alb/b2975f4ed981b464",
            "arn_suffix": "app/ecs-alb/b2975f4ed981b464",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-59080282.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:880731812020:loadbalancer/app/ecs-alb/b2975f4ed981b464",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-032d0937a5664d0f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c590a68af222423"
              },
              {
                "subnet_id": "subnet-04a397a7591393d8c"
              }
            ],
            "subnets": [
              "subnet-00c590a68af222423",
              "subnet-04a397a7591393d8c"
            ],
            "tags": {
              "Name": "ECS Load Balancer"
            },
            "tags_all": {
              "Name": "ECS Load Balancer"
            },
            "vpc_id": "vpc-095c5345c81ddae91",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group-alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:880731812020:listener/app/ecs-alb/b2975f4ed981b464/01e58ab1c006da85",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:880731812020:targetgroup/ecs-target-group/83ffbd66379742bb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:880731812020:listener/app/ecs-alb/b2975f4ed981b464/01e58ab1c006da85",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:880731812020:loadbalancer/app/ecs-alb/b2975f4ed981b464",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.security_group-alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:880731812020:targetgroup/ecs-target-group/83ffbd66379742bb",
            "arn_suffix": "targetgroup/ecs-target-group/83ffbd66379742bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:880731812020:targetgroup/ecs-target-group/83ffbd66379742bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:880731812020:loadbalancer/app/ecs-alb/b2975f4ed981b464"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07404fb31b0d8f4d5",
            "id": "r-rtb-05d6ac14f526c8d291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d6ac14f526c8d29",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:route-table/rtb-02d0f0870fc6a58f4",
            "id": "rtb-02d0f0870fc6a58f4",
            "owner_id": "880731812020",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "M300-Private-RT"
            },
            "tags_all": {
              "Name": "M300-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:route-table/rtb-05d6ac14f526c8d29",
            "id": "rtb-05d6ac14f526c8d29",
            "owner_id": "880731812020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07404fb31b0d8f4d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "M300-Public-RT"
            },
            "tags_all": {
              "Name": "M300-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086db9824ddb6ccf4",
            "route_table_id": "rtb-02d0f0870fc6a58f4",
            "subnet_id": "subnet-05116a1f5e8b27195"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06419e8db89bfe93a",
            "route_table_id": "rtb-02d0f0870fc6a58f4",
            "subnet_id": "subnet-0d806cbd146e94800"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac84a6ec258cb3bf",
            "route_table_id": "rtb-05d6ac14f526c8d29",
            "subnet_id": "subnet-04a397a7591393d8c"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adefe84929fd6fe2",
            "route_table_id": "rtb-05d6ac14f526c8d29",
            "subnet_id": "subnet-00c590a68af222423"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:security-group/sg-032d0937a5664d0f8",
            "description": "Allow public HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032d0937a5664d0f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public access to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-alb",
            "name_prefix": "",
            "owner_id": "880731812020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:security-group/sg-087752b62323b9771",
            "description": "Allow internal access to RDS from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087752b62323b9771",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL access from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from ECS to RDS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f17b9361f90279c2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "security-group-db",
            "name_prefix": "",
            "owner_id": "880731812020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS DB SG"
            },
            "tags_all": {
              "Name": "RDS DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group-ecs-wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:security-group/sg-0f17b9361f90279c2",
            "description": "Allow HTTP traffic to ECS WordPress containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f17b9361f90279c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-ecs-wordpress",
            "name_prefix": "",
            "owner_id": "880731812020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS WordPress SG"
            },
            "tags_all": {
              "Name": "ECS WordPress SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MySQL from ECS to RDS",
            "from_port": 3306,
            "id": "sgrule-442821536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087752b62323b9771",
            "security_group_rule_id": "sgr-024e115b6e6ec1f9a",
            "self": false,
            "source_security_group_id": "sg-0f17b9361f90279c2",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group-db",
            "aws_security_group.security_group-ecs-wordpress",
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:subnet/subnet-05116a1f5e8b27195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05116a1f5e8b27195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880731812020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "M300-Private-1"
            },
            "tags_all": {
              "Name": "M300-Private-1"
            },
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:subnet/subnet-0d806cbd146e94800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d806cbd146e94800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880731812020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "M300-Private-2"
            },
            "tags_all": {
              "Name": "M300-Private-2"
            },
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:subnet/subnet-04a397a7591393d8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a397a7591393d8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "880731812020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "M300-Public-1"
            },
            "tags_all": {
              "Name": "M300-Public-1"
            },
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:subnet/subnet-00c590a68af222423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c590a68af222423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "880731812020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "M300-Public-2"
            },
            "tags_all": {
              "Name": "M300-Public-2"
            },
            "vpc_id": "vpc-095c5345c81ddae91"
          },
          "dependencies": [
            "aws_vpc.m300_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m300_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880731812020:vpc/vpc-095c5345c81ddae91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2a480c2e344742d",
            "default_route_table_id": "rtb-0348f7df77e4fc243",
            "default_security_group_id": "sg-09ffff2bf14cb6144",
            "dhcp_options_id": "dopt-04efc8722a7ad4b9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095c5345c81ddae91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0348f7df77e4fc243",
            "owner_id": "880731812020",
            "tags": {
              "Name": "M300-VPC"
            },
            "tags_all": {
              "Name": "M300-VPC"
            }
          }
        }
      ]
    }
  ]
}